# click-boilerplate

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
src/click_boilerplate/: cli.py
src/click_boilerplate/mysubgroup/: main.py
